--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
     "svelte": "^3.0.0"
   },
   "dependencies": {
-    "sirv-cli": "^1.0.0"
+    "bootstrap": "^5.1.1",
+    "chart.js": "^3.5.1",
+    "sirv-cli": "^1.0.0",
+    "svelte-spa-router": "^3.2.0",
+    "sveltestrap": "^5.6.3"
   }
 }
